Complete Reduce Spacing between List Items Issue #51

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -151,7 +151,7 @@ a {
 /* Styling for each gift in list */
 .gift-list-item {
   /* border: 6px solid; */
-  margin: 1.5em 20%;
+  margin: 0em 20%;
   word-wrap: break-word;
   border-radius: 4px;
   padding: 0.3em;
@@ -159,17 +159,11 @@ a {
 
 /* Styling for each Purchased gift in list */
 .gift-list-item-purchased {
-  /* border: 6px solid #26A65B;
-  background-color: white;
-  box-shadow: 0px 0px 2px #26A65B; */
   color: #26A65B;
 }
 
 /* Styling for each Non-Purchased gift in list */
 .gift-list-item-not-purchased {
-  /* border: 6px solid #CF000F;
-  background-color: white;
-  box-shadow: 0px 0px 2px #CF000F; */
   color: #CF000F;
 }
 
@@ -224,15 +218,11 @@ a {
 
 /* The gift item name in each block */
 .gift-list-name {
-  font-size: 3.5em;
+  font-size: 3em;
   font-family: 'Karla', sans-serif;
   text-decoration: none;
 }
-/*
-.gift-list-item a {
-   display: block; 
-}
-*/
+
 .gift-list-dates {
   font-size: 1em;
 }
@@ -354,7 +344,7 @@ and (orientation : portrait) {
 
 
 .gift-list-item {
-  margin: 1.5em 2%;
+  margin: 0.2em 2%;
 }
 
 .gift-list-name {
